# nubrastats

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: check_symbol_diagnostics.py  detailed_report_mode_demo.py  generate_report.py  import_smoke.py  nubra_api_quick_test.py  nubra_api_static_test.py  nubra_ui_popup_demo.py  terminal_menu_tester.py
src/nubrastats/: __init__.py  adapters.py  models.py  nubra.py  plots.py  reports.py  stats.py  ui.py  utils.py
src/nubrastats/templates/: report.html  report_detailed.html
tests/: test_adapters.py  test_nubra.py  test_plots.py  test_reports.py  test_stats.py  test_ui.py
