[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubrastats"
version = "0.1.2"
description = "Nubra-native analytics, plots, and reports for trading workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nubra Stats" }
]
keywords = ["nubra", "trading", "analytics", "reports", "tearsheet"]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "tabulate>=0.9.0",
  "jinja2>=3.1.0",
  "python-dateutil>=2.8.2",
  "tkcalendar>=1.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nubrastats = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
